feat: add convert roadmap to learning goal functionality
- Add "Create actionable plan" button in roadmap detail view
- Implement POST /api/v1/roadmap/{id}/convert-to-learning-goal endpoint
- Add convertToLearningGoal method in roadmap store with loading state
- Add tooltip explaining the conversion feature
- Navigate to created learning goal after successful conversion
- Add translations for button, tooltip, and toast messages (en/es)
- Manage isConverting state in Zustand store for better UX

This feature allows users to convert a learning roadmap into a structured
learning goal with manageable objectives and tasks.

--- a/soft-skills-front/src/i18n/locales/en/goals.json
+++ b/soft-skills-front/src/i18n/locales/en/goals.json
@@ -24,7 +24,10 @@
     "notStarted": "Not started yet",
     "objectives": "objectives",
     "complete": "complete",
-    "noObjectives": "No objectives yet. Start breaking down this goal!"
+    "noObjectives": "No objectives yet. Start breaking down this goal!",
+    "viewGoal": "View goal",
+    "deleteGoal": "Delete goal",
+    "convertToRoadmap": "Transform to roadmap"
   },
   "goalDetail": {
     "title": "Title",
@@ -85,6 +88,8 @@
       "noObjectivesFound": "No objectives found for this learning goal.",
       "noObjectivesMatchFilters": "No objectives match your current filters.",
       "errorLoading": "Error loading objectives",
+      "viewObjective": "View objective",
+      "deleteObjective": "Delete objective",
       "pagination": {
         "rowsPerPage": "Rows per page:",
         "displayedRows": "{{from}}-{{to}} of {{count}}"
