--- a/soft-skills-front/src/i18n/locales/en/roadmap.json
+++ b/soft-skills-front/src/i18n/locales/en/roadmap.json
@@ -44,6 +44,8 @@
     "editRoadmap": "Edit",
     "copyRoadmap": "Copy",
     "copyRoadmapTooltip": "Creates a copy of the roadmap in your account",
+    "createActionablePlan": "Create actionable plan",
+    "createActionablePlanTooltip": "Converts this learning roadmap into a structured plan with manageable objectives and tasks",
     "createdBy": "Created by",
     "unknownAuthor": "Unknown Author",
     "learningSteps": "learning steps",
@@ -205,6 +207,10 @@
     "updateError": "Error updating roadmap",
     "updateMetadataSuccess": "Roadmap metadata updated successfully!",
     "updateMetadataError": "Error updating roadmap metadata",
+    "copySuccess": "Roadmap copied successfully",
+    "copyError": "Failed to copy roadmap",
+    "convertToLearningGoalSuccess": "Roadmap converted to learning goal successfully",
+    "convertToLearningGoalError": "Failed to convert roadmap to learning goal",
     "validation": {
       "noObjectives": "A public roadmap must contain at least one objective.",
       "unassignedTasksVisibility": "All tasks of a public roadmap must be connected to an objective before making it public.",
