--- a/soft-skills-front/src/i18n/locales/es/roadmap.json
+++ b/soft-skills-front/src/i18n/locales/es/roadmap.json
@@ -44,6 +44,8 @@
     "editRoadmap": "Editar",
     "copyRoadmap": "Copiar",
     "copyRoadmapTooltip": "Crea una copia del roadmap en tu cuenta",
+    "createActionablePlan": "Crear plan accionable",
+    "createActionablePlanTooltip": "Convierte esta ruta de aprendizaje en un plan estructurado con objetivos y tareas manejables",
     "createdBy": "Creado por",
     "unknownAuthor": "Autor desconocido",
     "learningSteps": "pasos de aprendizaje",
@@ -205,6 +207,10 @@
     "updateError": "Error al actualizar el plan de aprendizaje",
     "updateMetadataSuccess": "¡Metadatos del plan de aprendizaje actualizados exitosamente!",
     "updateMetadataError": "Error al actualizar los metadatos del plan de aprendizaje",
+    "copySuccess": "Plan de aprendizaje copiado exitosamente",
+    "copyError": "Error al copiar el plan de aprendizaje",
+    "convertToLearningGoalSuccess": "Plan de aprendizaje convertido en meta de aprendizaje correctamente",
+    "convertToLearningGoalError": "Error al convertir el plan de aprendizaje en meta de aprendizaje",
     "validation": {
       "noObjectives": "Un plan de aprendizaje público debe contener al menos un objetivo.",
       "unassignedTasksVisibility": "Todas las tareas de un plan de aprendizaje público deben estar conectadas a un objetivo antes de hacerlo público.",
